src/App.css
h1 {
  font-family: Poppins, sans-serif;
  font-weight: 400;
}

.todoListContainer {
  width: 90%;
  max-width: 800px;
  margin: 0 auto;
  margin-top: 100px;
}

.listColor {
  display: inline-block;
  height: 20px;
  width: 20px;
  border-radius: 5px;
  margin-right: 1rem;
}

.btn-menu {
  position: fixed;
  top: 25px;
  left: 25px;
  height: 36px;
  width: 36px;
  background-color: #dfe1e5;
  border-radius: 10px;
  padding: 10px;
}

.btn-menu:hover {
  background-color: #b8b8bc;
  cursor: pointer;
}

